# Bots

./: .clang-format  .gitignore  README.md  WORKSPACE  WORKSPACE.bazel  appspec.yml  workflow_start.sh
.github/workflows/: alternate_deploy.yml  main.yml
api/: app.ts  package.json
aws/cf/: core-stack.yaml  sample.txt
aws/migration/: .env  data-collector.js  index.js  package.json  testConnectivity.js
aws/migration/clients/: s3-client-config.js
aws/migration/helpers/: url-validator.js
aws/migration/samples/bot-out/: sample-data.csv
aws_migration/: package.json
aws_migration/clients/: s3-client-config.js
aws_migration/samples/: data-seeder.sh
bot/: BUILD.bazel  app.py  bots.py  constants.py  readme.txt  requirements.txt
bot/stages/: BUILD.bazel  bot_info.py  config.py  constants.py  interact.py  interact_test.py  login.py  login_test.py  scraping_util.py  scraping_util_test.py
bot/util/: BUILD.bazel  dump_proto.py
bot_out/: README.md
error_logging/: 17c74dcb-f3eb-4812-bf9f-819f4e98d1f7.html  1997adb9-51d7-4d8e-bd2e-519bac400c84.html  2021-08-24 14_42_47Allison45555547.html  98f09dc8-d099-4e10-bf98-4384863e470d.html  e176faba-2a49-4d28-b511-9e5039b7d73d.html
proto/: BUILD.bazel  ad.proto  bot.proto
push-service/: BUILD.bazel  CMakeLists.txt  README.md  main.cc  push_service_util.cc  push_service_util.h  push_service_util_test.cc  runner.cc  runner.h
push-service/apps/: CMakeLists.txt  main.cpp
push-service/connection/: BUILD.bazel  connection_manager.cc  connection_manager.h
push-service/dispatcher/: BUILD.bazel  RDSDispatcher.h
push-service/docs/: CMakeLists.txt
push-service/src/: CMakeLists.txt  lib.cpp
push-service/tests/: CMakeLists.txt  testlib.cpp
scripts/: bot-info.csv  bot_scheduler.py  install_dependencies.sh  install_dependencies_ubuntu.sh  run-bots.sh  start_server.sh  stop_server.sh  test.sh
systemd/: bots.service  push-service.service
webdrivers/: BUILD.bazel
