load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//python:python_proto_library.bzl", "python_proto_library")

proto_library(
    name = "bot_proto",
    srcs = ["bot.proto"],
)

proto_library(
    name = "ad_proto",
    srcs = ["ad.proto"],
    deps = [":bot_proto"],
)

python_proto_library(
    name = "bot_py_proto",
    visibility = ["//visibility:public"],
    deps = [":bot_proto"],
)

python_proto_library(
    name = "ad_py_proto",
    visibility = ["//visibility:public"],
    deps = [":ad_proto"],
)
