load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

proto_library(
    name = "bot_proto",
    srcs = ["bot.proto"],
)

proto_library(
    name = "ad_proto",
    srcs = ["ad.proto"],
    deps = [":bot_proto"],
)

py_proto_library(
    name = "bot_py_proto",
    srcs = ["bot.proto"],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "ad_py_proto",
    srcs = ["ad.proto"],
    visibility = ["//visibility:public"],
    deps = [":bot_py_proto"],
)
