load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
load("@rules_cc//cc:defs.bzl", "cc_proto_library")

proto_library(
    name = "bot_proto",
    srcs = ["bot.proto"],
)

proto_library(
    name = "ad_proto",
    srcs = ["ad.proto"],
    deps = [
        ":bot_proto",
        "@com_google_protobuf//:timestamp_proto",  # See FAQs: https://blog.bazel.build/2017/02/27/protocol-buffers.html
    ],
)

py_proto_library(
    name = "bot_py_proto",
    srcs = ["bot.proto"],
    visibility = ["//visibility:public"],
)

py_proto_library(
    name = "ad_py_proto",
    srcs = ["ad.proto"],
    visibility = ["//visibility:public"],
    deps = [
        ":bot_py_proto",
        "@com_google_protobuf//:protobuf_python",
    ],
)

cc_proto_library(
    name = "ad_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":ad_proto"],
)

cc_proto_library(
    name = "bot_cc_proto",
    visibility = ["//visibility:public"],
    deps = [":bot_proto"],
)
