load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake", "configure_make")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    deps = [
        ":aws_sdk_cpp",
        ":runner",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "runner",
    srcs = ["runner.cc"],
    hdrs = ["runner.h"],
    deps = [
        ":push_service_util",
        "//push-service/connection:connection_manager",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_library(
    name = "push_service_util",
    srcs = ["push_service_util.cc"],
    hdrs = ["push_service_util.h"],
    linkopts = ["-lpq"],
    deps = [
        ":aws_sdk_cpp",
        ":libpqxx",
        "//proto:ad_cc_proto",
        "//proto:bot_cc_proto",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_test(
    name = "push_service_util_test",
    srcs = ["push_service_util_test.cc"],
    deps = [
        ":push_service_util",
        "@com_google_googletest//:gtest_main",
    ],
)

cmake(
    name = "aws_sdk_cpp",
    build_args = ["-j4"],  # Make it faster by using more processes.
    cache_entries = {
        "CMAKE_BUILD_TYPE": "Release",
        "BUILD_ONLY": "s3",
        "BUILD_SHARED_LIBS": "ON",  # Use dynamic libraries (.so) instead of static (.a)
        "ENABLE_TESTING": "OFF",
    },
    install = True,
    lib_source = "@aws_sdk_cpp//:all_srcs",
    out_shared_libs = [
        "libaws-cpp-sdk-core.so",
        "libaws-cpp-sdk-s3.so",
    ],
    visibility = ["//visibility:public"],
)

configure_make(
    name = "libpqxx",
    args = [
        "-j4",  # Make it faster by using more processes.
    ],
    configure_options = [
        "--disable-documentation",
    ],
    lib_source = "@libpqxx//:all_srcs",
    out_static_libs = [
        "libpqxx.a",
    ],
    visibility = ["//visibility:public"],
)
