load("@rules_python//python:defs.bzl", "py_library")
load("@bot_deps//:requirements.bzl", "requirement")

py_library(
    name = "stages",
    srcs = glob(["*.py"]),
    visibility = ["//bot:__pkg__"],
    deps = [
        requirement("selenium"),
        requirement("absl-py"),
        "//proto:ad_py_proto",
        "//proto:bot_py_proto",
    ],
)

py_test(
    name = "login_test",
    srcs = ["login_test.py"],
    deps = [":stages"],
)
